--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,3 +20,11 @@ RoxygenNote: 7.3.2
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Imports: 
+    glue,
+    httr2,
+    purrr,
+    rlang,
+    stringr,
+    tibble,
+    xml2
