--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,11 @@ export(build_root_url)
 export(parse_codelists)
 export(parse_dataflows)
 export(parse_dsds)
+export(retrieve_data)
 export(retrieve_structure)
+importFrom(httr2,req_perform)
+importFrom(httr2,req_url_path_append)
+importFrom(httr2,req_url_query)
+importFrom(httr2,req_user_agent)
+importFrom(httr2,request)
+importFrom(readr,read_csv)
