--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,3 +28,5 @@ Imports:
     stringr,
     tibble,
     xml2
+URL: https://github.com/WB-DECIS/dotstatR
+BugReports: https://github.com/WB-DECIS/dotstatR/issues
